--- a/pacman/pom.xml
+++ b/pacman/pom.xml
@@ -17,12 +17,7 @@
     <dependencies>
         <dependency>
             <groupId>fr.univ</groupId>
-            <artifactId>core</artifactId>
-            <version>0.1-alpha</version>
-        </dependency>
-        <dependency>
-            <groupId>fr.univ</groupId>
-            <artifactId>ui</artifactId>
+            <artifactId>engine</artifactId>
             <version>0.1-alpha</version>
         </dependency>
     </dependencies>
