--- a/engine/pom.xml
+++ b/engine/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>engine</artifactId>
-    <version>0.1-alpha</version>
+    <version>1.3</version>
 
     <description>A 2D JavaFX Game Engine.</description>
 
