--- a/engine/pom.xml
+++ b/engine/pom.xml
@@ -38,5 +38,11 @@
             <version>15</version>
             <classifier>win</classifier>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.6.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
