--- a/pacman/pom.xml
+++ b/pacman/pom.xml
@@ -42,7 +42,7 @@
                             <transformers>
                                 <transformer implementation=
                                                      "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>fr.univ.pacman.Main</mainClass>
+                                    <mainClass>fr.univ.pacman.GamePlay</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
